--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
-  "name": "social-video-generator",
-  "version": "1.0.0",
-  "description": "My Remotion video",
-  "scripts": {
-    "start": "remotion preview src/index.tsx",
-    "build": "remotion render src/index.tsx HelloWorld out/video.mp4",
-    "upgrade": "remotion upgrade",
-    "test": "eslint src --ext ts,tsx,js,jsx && tsc"
-  },
-  "repository": {},
-  "license": "UNLICENSED",
-  "dependencies": {
-    "@remotion/cli": "^3.0.0",
-    "@remotion/eslint-config": "^3.0.0",
-    "eslint": "^8.14.0",
-    "prettier": "^2.2.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "remotion": "^3.0.0",
-    "typescript": "^4.6.3"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.6",
-    "@types/web": "^0.0.61"
-  }
+	"name": "social-video-generator",
+	"version": "1.0.0",
+	"description": "My Remotion video",
+	"scripts": {
+		"format": "prettier --write .",
+		"start": "remotion preview src/index.tsx",
+		"build": "remotion render src/index.tsx HelloWorld out/video.mp4",
+		"upgrade": "remotion upgrade",
+		"test": "eslint src --ext ts,tsx,js,jsx && tsc"
+	},
+	"repository": {},
+	"license": "UNLICENSED",
+	"dependencies": {
+		"@remotion/cli": "^3.0.0",
+		"@remotion/eslint-config": "^3.0.0",
+		"eslint": "^8.14.0",
+		"react": "^18.0.0",
+		"react-dom": "^18.0.0",
+		"remotion": "^3.0.0",
+		"typescript": "^4.6.3"
+	},
+	"devDependencies": {
+		"@types/react": "^18.0.6",
+		"@types/web": "^0.0.61",
+		"prettier": "^2.7.1"
+	}
 }
