--- a/.github/workflows/render-sponsor.yml
+++ b/.github/workflows/render-sponsor.yml
@@ -23,8 +23,8 @@ jobs:
       - run: echo $WORKFLOW_INPUT > input-props.json
         env:
           WORKFLOW_INPUT: ${{ toJson(github.event.inputs) }}
-      - run: pnpm remotion render src/index.tsx Sponsor out/video.mp4 -- --props="./input-props.json"
+      - run: pnpm remotion render src/index.tsx Sponsor out/sponsor-${{github.event.inputs.companyName}}.mp4 -- --props="./input-props.json"
       - uses: actions/upload-artifact@v2
         with:
-          name: out.mp4
-          path: out/video.mp4
+          name: sponsor-${{github.event.inputs.companyName}}
+          path: out
