--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@types/react": "^18.0.6",
 		"@types/web": "^0.0.61",
 		"husky": "^8.0.1",
-		"prettier": "^2.7.1"
+		"prettier": "^2.7.1",
+		"pretty-quick": "^3.1.3"
 	}
 }
