ci: remove double -- in render

--- a/.github/workflows/render-sponsor.yml
+++ b/.github/workflows/render-sponsor.yml
@@ -26,7 +26,7 @@ jobs:
       - run: echo $WORKFLOW_INPUT > input-props.json
         env:
           WORKFLOW_INPUT: ${{ toJson(github.event.inputs) }}
-      - run: pnpm remotion render src/index.tsx Sponsor out/sponsor-${{github.event.inputs.companyName}}.mp4 -- --props="./input-props.json"
+      - run: pnpm remotion render src/index.tsx Sponsor out/sponsor-${{github.event.inputs.companyName}}.mp4 --props="./input-props.json"
       - uses: actions/upload-artifact@v2
         with:
           name: sponsor-${{github.event.inputs.companyName}}
