--- a/.github/workflows/render-sponsor.yml
+++ b/.github/workflows/render-sponsor.yml
@@ -7,7 +7,10 @@ on:
         required: true
         default: "Example"
       backgroundImg:
-        deprecationMessage: "If you want to use custom image for background"
+        description: "If you want to use custom image for background"
+        required: false
+      sponsorLogo:
+        description: "If you want to use custom image for sponsor logo"
         required: false
 jobs:
   render:
