feat(talk): add new style of generated video

--- a/.github/workflows/render-talk.yml
+++ b/.github/workflows/render-talk.yml
@@ -1,16 +1,21 @@
-name: 🍹 Sponsor
+name: 🎤 Talk
 on:
   workflow_dispatch:
     inputs:
-      companyName:
-        description: "What is the name of the sponsor company?"
+      speakersNames:
+        description: "What are the name of the speakers?"
         required: true
-        default: "Example"
-      backgroundImg:
-        description: "If you want to use custom image for background"
+        default: "John Doe & Terry Pratchett"
+      talkTitle:
+        description: "What is the title of the talk?"
+        required: true
+        default: "Is JS an awesome programing language?"
+      titleSize:
+        description: "What is the title of the talk?"
         required: false
-      sponsorLogo:
-        description: "If you want to use custom image for sponsor logo"
+        default: "80px"
+      speakerPicture:
+        description: "Url of the profile picture of the speaker"
         required: false
 jobs:
   render:
@@ -29,8 +34,8 @@ jobs:
       - run: echo $WORKFLOW_INPUT > input-props.json
         env:
           WORKFLOW_INPUT: ${{ toJson(github.event.inputs) }}
-      - run: pnpm remotion render src/index.tsx Sponsor out/sponsor-${{github.event.inputs.companyName}}.mp4 --props="./input-props.json"
+      - run: pnpm remotion render src/index.tsx Talk out/talk-${{github.run_id}}.mp4 --props="./input-props.json"
       - uses: actions/upload-artifact@v2
         with:
-          name: sponsor-${{github.event.inputs.companyName}}
+          name: talk-${{github.run_id}}
           path: out
