--- a/.github/workflows/render-sponsor.yml
+++ b/.github/workflows/render-sponsor.yml
@@ -27,9 +27,13 @@ jobs:
           version: 7
           run_install: true
       - run: echo $WORKFLOW_INPUT > input-props.json
+        name: Preparing props
         env:
           WORKFLOW_INPUT: ${{ toJson(github.event.inputs) }}
       - run: pnpm remotion render src/index.tsx Sponsor out/sponsor-${{github.event.inputs.companyName}}.mp4 --props="./input-props.json"
+        name: 🎬 Generating video
+      - run: pnpm remotion still src/index.tsx Sponsor --props="./input-props.json" --frame 119
+        name: 📷 Generating last image
       - uses: actions/upload-artifact@v2
         with:
           name: sponsor-${{github.event.inputs.companyName}}
