--- a/.github/workflows/render-talk.yml
+++ b/.github/workflows/render-talk.yml
@@ -37,9 +37,11 @@ jobs:
           WORKFLOW_INPUT: ${{ toJson(github.event.inputs) }}
       - run: pnpm remotion render src/index.tsx TalkWithoutPicture out/talk-${{github.run_id}}.mp4 --props="./input-props.json"
         name: 🎬 Generating video
+        working-directory: packages/remotion-components
       - run: pnpm remotion still src/index.tsx TalkWithoutPicture --props="./input-props.json" --frame 119
         name: 📷 Generating last image
+        working-directory: packages/remotion-components
       - uses: actions/upload-artifact@v3
         with:
           name: talk-${{github.run_id}}
-          path: out
+          path: packages/remotion-components/out
