--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           version: 7
           run_install: true
-      - run: pnpm run test
+      - run: pnpm run test --if-present --recursive
 
   format:
     name: 💅 Check format
@@ -67,7 +67,8 @@ jobs:
         env:
           WORKFLOW_INPUT: ${{ toJson(matrix.event.inputs) }}
       - run: pnpm remotion render src/index.tsx ${{matrix.composition.name}} out/${{matrix.composition.name}}.mp4 --props="./input-props.json"
+        working-directory: packages/remotion-components
       - uses: actions/upload-artifact@v3
         with:
           name: video
-          path: out
+          path: packages/remotion-components/out
