--- a/package.json
+++ b/package.json
@@ -3,28 +3,14 @@
 	"version": "1.0.0",
 	"private": true,
 	"description": "My Remotion video",
-	"scripts": {
-		"format": "prettier --write .",
-		"start": "remotion preview src/index.tsx",
-		"upgrade": "remotion upgrade",
-		"test": "eslint src --ext ts,tsx,js,jsx && tsc"
-	},
 	"repository": {},
 	"license": "MIT",
-	"dependencies": {
-		"@remotion/cli": "3.2.12",
+	"devDependencies": {
 		"@remotion/eslint-config": "3.2.12",
 		"eslint": "8.23.0",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
-		"remotion": "3.2.12",
-		"typescript": "4.8.2"
-	},
-	"devDependencies": {
-		"@types/react": "18.0.18",
-		"@types/web": "0.0.72",
 		"husky": "8.0.1",
 		"prettier": "2.7.1",
-		"pretty-quick": "3.1.3"
+		"pretty-quick": "3.1.3",
+		"typescript": "4.8.2"
 	}
 }
