--- a/packages/remotion-components/package.json
+++ b/packages/remotion-components/package.json
@@ -10,18 +10,24 @@
 	"scripts": {
 		"start": "remotion preview ./src/index.tsx",
 		"upgrade": "remotion upgrade",
-		"test": "eslint ./src --ext ts,tsx,js,jsx && tsc"
+		"test": "eslint ./src --ext ts,tsx,js,jsx && tsc",
+		"build": "next build",
+		"dev": "next dev"
 	},
 	"repository": {},
 	"license": "MIT",
 	"dependencies": {
+		"@remotion/player": "3.2.12",
 		"@remotion/cli": "3.2.12",
+		"next": "latest",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"remotion": "3.2.12"
 	},
 	"devDependencies": {
-		"@types/react": "18.0.18",
+		"@types/node": "^18.0.0",
+		"@types/react": "^18.0.14",
+		"@types/react-dom": "^18.0.5",
 		"@types/web": "0.0.72",
 		"typescript": "4.8.2"
 	}
