fixup! rework in single package

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -86,3 +86,4 @@ jobs:
           version: 7
           run_install: true
       - run: pnpm build
+        working-directory: packages/remotion-components
