feat: setup next debug app (#8)
* feat: setup next debug app

* remove next folder

* rework in single package

* fixup! rework in single package

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -73,3 +73,17 @@ jobs:
         with:
           name: video
           path: packages/remotion-components/out
+
+  nextjs:
+    name: ⚛️ NextJS application
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@main
+      - uses: actions/setup-node@main
+      - uses: pnpm/action-setup@v2.2.2
+        name: Install pnpm
+        with:
+          version: 7
+          run_install: true
+      - run: pnpm build
+        working-directory: packages/remotion-components
