--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           version: 7
           run_install: true
-      - run: pnpm run --recursive --if-present test
+      - run: pnpm run test
 
   format:
     name: 💅 Check format
@@ -64,15 +64,13 @@ jobs:
           version: 7
           run_install: true
       - run: echo $WORKFLOW_INPUT > input-props.json
-        working-directory: packages/remotion-components
         env:
           WORKFLOW_INPUT: ${{ toJson(matrix.event.inputs) }}
       - run: pnpm remotion render src/index.tsx ${{matrix.composition.name}} out/${{matrix.composition.name}}.mp4 --props="./input-props.json"
-        working-directory: packages/remotion-components
       - uses: actions/upload-artifact@v3
         with:
           name: video
-          path: packages/remotion-components/out
+          path: out
 
   nextjs:
     name: ⚛️ NextJS application
@@ -86,4 +84,3 @@ jobs:
           version: 7
           run_install: true
       - run: pnpm build
-        working-directory: packages/remotion-components
