--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,37 @@
-node_modules
-dist
-.DS_Store
-.env
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+.next
+dist/
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# Ignore the output video from Git but not videos you import into src/.
-out
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
