--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -43,7 +43,7 @@ jobs:
           - name: "Sponsor"
             props:
               companyName: "Foo"
-          - name: "TalkWithoutPicture"
+          - name: "Talk"
             props:
               title: "Example of a Title"
               speakersNames: "John Doe"
