--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,10 @@
 {
 	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
-	"extends": ["config:base"]
+	"extends": ["config:base"],
+	"packageRules": [
+		{
+			"matchPackagePatterns": ["remotion"],
+			"groupName": "remotion"
+		}
+	]
 }
