--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
 		"allowJs": true,
 		"incremental": true,
 		"resolveJsonModule": true,
-		"isolatedModules": true
+		"isolatedModules": true,
+		"moduleResolution": "node"
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
 	"exclude": ["node_modules"]
