--- a/package.json
+++ b/package.json
@@ -28,10 +28,14 @@
 		"@types/react": "18.0.19",
 		"@types/react-dom": "18.0.6",
 		"@types/web": "0.0.72",
+		"autoprefixer": "^10.4.8",
+		"eslint": "8.23.0",
 		"eslint": "8.23.1",
 		"husky": "8.0.1",
+		"postcss": "^8.4.16",
 		"prettier": "2.7.1",
 		"pretty-quick": "3.1.3",
+		"tailwindcss": "^3.1.8",
 		"typescript": "4.8.3"
 	}
 }
