--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"@remotion/lottie": "3.3.31",
 		"@remotion/player": "3.3.31",
 		"lottie-web": "5.10.1",
-		"next": "latest",
+		"next": "^13.1.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"remotion": "3.3.31"
@@ -29,12 +29,15 @@
 		"@types/react-dom": "18.0.10",
 		"@types/web": "0.0.87",
 		"autoprefixer": "10.4.13",
+		"debug": "4.3.4",
 		"eslint": "8.31.0",
 		"husky": "8.0.3",
+		"lodash": "4.17.21",
 		"postcss": "8.4.21",
 		"prettier": "2.8.2",
 		"pretty-quick": "3.1.3",
 		"tailwindcss": "3.2.4",
-		"typescript": "4.9.4"
+		"typescript": "4.9.4",
+		"yargs": "17.6.2"
 	}
 }
