--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"next": "^13.1.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-json-editor-ajrm": "^2.5.13",
 		"remotion": "3.3.34"
 	},
 	"devDependencies": {
@@ -28,6 +29,7 @@
 		"@types/react": "18.0.27",
 		"@types/react-dom": "18.0.10",
 		"@types/web": "0.0.89",
+		"@types/react-json-editor-ajrm": "^2.5.3",
 		"autoprefixer": "10.4.13",
 		"debug": "4.3.4",
 		"eslint": "8.32.0",
