feat(mixit): add script to generate JSON for video generation

--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
 		"@remotion/lottie": "3.3.44",
 		"@remotion/player": "3.3.44",
 		"@remotion/shapes": "3.3.44",
+		"date-fns": "^2.29.3",
 		"lottie-web": "5.10.2",
 		"next": "^13.1.6",
+		"node-fetch": "^3.3.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-json-editor-ajrm": "^2.5.14",
