ci: use pnpm cache during workflows

--- a/.github/workflows/render-meetup.yml
+++ b/.github/workflows/render-meetup.yml
@@ -22,6 +22,8 @@ jobs:
       - run: sudo apt install ffmpeg
       - uses: actions/checkout@main
       - uses: actions/setup-node@main
+        with:
+          cache: "pnpm"
       - uses: pnpm/action-setup@v2.2.4
         name: Install pnpm
         with:
