--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - uses: actions/checkout@main
       - uses: actions/setup-node@main
+        with:
+          cache: "pnpm"
       - uses: pnpm/action-setup@v2.2.4
         name: Install pnpm
         with:
@@ -25,6 +27,8 @@ jobs:
     steps:
       - uses: actions/checkout@main
       - uses: actions/setup-node@main
+        with:
+          cache: "pnpm"
       - uses: pnpm/action-setup@v2.2.4
         name: Install pnpm
         with:
@@ -58,6 +62,8 @@ jobs:
       - run: sudo apt install ffmpeg
       - uses: actions/checkout@main
       - uses: actions/setup-node@main
+        with:
+          cache: "pnpm"
       - uses: pnpm/action-setup@v2.2.4
         name: Install pnpm
         with:
@@ -78,6 +84,8 @@ jobs:
     steps:
       - uses: actions/checkout@main
       - uses: actions/setup-node@main
+        with:
+          cache: "pnpm"
       - uses: pnpm/action-setup@v2.2.4
         name: Install pnpm
         with:
