manually install pnpm deps in order to take advantage of cache

--- a/.github/workflows/render-talk.yml
+++ b/.github/workflows/render-talk.yml
@@ -32,10 +32,10 @@ jobs:
         name: Install pnpm
         with:
           version: 7
-          run_install: true
       - uses: actions/setup-node@main
         with:
           cache: pnpm
+      - run: pnpm install --frozen-lockfile --prefer-offline
       - run: echo $WORKFLOW_INPUT > input-props.json
         name: Preparing props
         env:
