--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -15,10 +15,10 @@ jobs:
         name: Install pnpm
         with:
           version: 7
-          run_install: true
       - uses: actions/setup-node@main
         with:
           cache: pnpm
+      - run: pnpm install --frozen-lockfile --prefer-offline
       - run: pnpm run test
 
   format:
@@ -30,10 +30,10 @@ jobs:
         name: Install pnpm
         with:
           version: 7
-          run_install: true
       - uses: actions/setup-node@main
         with:
           cache: pnpm
+      - run: pnpm install --frozen-lockfile --prefer-offline
       - run: pnpm prettier --check .
 
   generateVideos:
@@ -65,10 +65,10 @@ jobs:
         name: Install pnpm
         with:
           version: 7
-          run_install: true
       - uses: actions/setup-node@main
         with:
           cache: pnpm
+      - run: pnpm install --frozen-lockfile --prefer-offline
       - run: echo $WORKFLOW_INPUT > input-props.json
         env:
           WORKFLOW_INPUT: ${{ toJson(matrix.event.inputs) }}
@@ -87,8 +87,8 @@ jobs:
         name: Install pnpm
         with:
           version: 7
-          run_install: true
       - uses: actions/setup-node@main
         with:
           cache: pnpm
+      - run: pnpm install --frozen-lockfile --prefer-offline
       - run: pnpm build
