ci: use pnpm cache during workflows (#151)

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -11,12 +11,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@main
-      - uses: actions/setup-node@main
       - uses: pnpm/action-setup@v2.2.4
         name: Install pnpm
         with:
           version: 7
-          run_install: true
+      - uses: actions/setup-node@main
+        with:
+          cache: pnpm
+      - run: pnpm install --frozen-lockfile --prefer-offline
       - run: pnpm run test
 
   format:
@@ -24,12 +26,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@main
-      - uses: actions/setup-node@main
       - uses: pnpm/action-setup@v2.2.4
         name: Install pnpm
         with:
           version: 7
-          run_install: true
+      - uses: actions/setup-node@main
+        with:
+          cache: pnpm
+      - run: pnpm install --frozen-lockfile --prefer-offline
       - run: pnpm prettier --check .
 
   generateVideos:
@@ -57,12 +61,14 @@ jobs:
       - run: sudo apt update
       - run: sudo apt install ffmpeg
       - uses: actions/checkout@main
-      - uses: actions/setup-node@main
       - uses: pnpm/action-setup@v2.2.4
         name: Install pnpm
         with:
           version: 7
-          run_install: true
+      - uses: actions/setup-node@main
+        with:
+          cache: pnpm
+      - run: pnpm install --frozen-lockfile --prefer-offline
       - run: echo $WORKFLOW_INPUT > input-props.json
         env:
           WORKFLOW_INPUT: ${{ toJson(matrix.event.inputs) }}
@@ -77,10 +83,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@main
-      - uses: actions/setup-node@main
       - uses: pnpm/action-setup@v2.2.4
         name: Install pnpm
         with:
           version: 7
-          run_install: true
+      - uses: actions/setup-node@main
+        with:
+          cache: pnpm
+      - run: pnpm install --frozen-lockfile --prefer-offline
       - run: pnpm build
