--- a/.eslintrc
+++ b/.eslintrc
@@ -2,5 +2,8 @@
 	"extends": "@remotion",
 	"globals": {
 		"process": true
+	},
+	"rules": {
+		"no-unused-vars": ["error", {"vars": "all", "args": "none"}]
 	}
 }
