--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -72,7 +72,7 @@ jobs:
       - run: echo $WORKFLOW_INPUT > input-props.json
         env:
           WORKFLOW_INPUT: ${{ toJson(matrix.event.inputs) }}
-      - run: pnpm remotion render src/index.tsx ${{matrix.composition.name}} out/${{matrix.composition.name}}.mp4 --props="./input-props.json"
+      - run: pnpm remotion render remotion/index.tsx ${{matrix.composition.name}} out/${{matrix.composition.name}}.mp4 --props="./input-props.json"
       - uses: actions/upload-artifact@v3
         with:
           name: video
