--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,13 @@
 		"incremental": true,
 		"resolveJsonModule": true,
 		"isolatedModules": true,
-		"moduleResolution": "node"
+		"moduleResolution": "node",
+		"plugins": [
+			{
+				"name": "next"
+			}
+		]
 	},
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
 	"exclude": ["node_modules"]
 }
