--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 	"scripts": {
 		"start": "remotion preview remotion/index.tsx",
 		"upgrade": "remotion upgrade",
-		"test": "eslint remotion --ext ts,tsx,js,jsx && tsc",
+		"lint": "eslint remotion --ext ts,tsx,js,jsx",
+		"test": "pnpm lint && tsc",
 		"build": "next build",
 		"dev": "next dev"
 	},
@@ -30,7 +31,7 @@
 	},
 	"devDependencies": {
 		"@iconify/react": "^4.1.0",
-		"@remotion/eslint-config": "3.3.79",
+		"@remotion/eslint-plugin": "3.3.79",
 		"@types/node": "18.15.10",
 		"@types/react": "18.0.29",
 		"@types/react-dom": "18.0.11",
@@ -39,6 +40,7 @@
 		"autoprefixer": "10.4.14",
 		"debug": "4.3.4",
 		"eslint": "8.36.0",
+		"eslint-config-next": "^13.2.4",
 		"husky": "8.0.3",
 		"lodash": "4.17.21",
 		"postcss": "8.4.21",
