--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
 		"start": "remotion preview remotion/index.tsx",
 		"upgrade": "remotion upgrade",
 		"lint": "eslint remotion --ext ts,tsx,js,jsx",
-		"test": "pnpm lint && tsc",
+		"test": "jest",
 		"build": "next build",
-		"dev": "next dev"
+		"dev": "next dev",
+		"test:format": "pnpm lint && tsc"
 	},
 	"dependencies": {
 		"@remotion/cli": "3.3.79",
@@ -19,8 +20,10 @@
 		"@remotion/lottie": "3.3.79",
 		"@remotion/player": "3.3.79",
 		"@remotion/shapes": "3.3.79",
+		"@types/jest": "29.5.0",
 		"@vercel/analytics": "^0.1.11",
 		"date-fns": "^2.29.3",
+		"jest": "29.5.0",
 		"lottie-web": "5.10.2",
 		"next": "^13.2.4",
 		"node-fetch": "^3.3.0",
@@ -32,6 +35,9 @@
 	"devDependencies": {
 		"@iconify/react": "^4.1.0",
 		"@remotion/eslint-plugin": "3.3.79",
+		"@testing-library/dom": "9.2.0",
+		"@testing-library/jest-dom": "5.16.5",
+		"@testing-library/react": "14.0.0",
 		"@types/node": "18.15.10",
 		"@types/react": "18.0.31",
 		"@types/react-dom": "18.0.11",
@@ -42,6 +48,7 @@
 		"eslint": "8.36.0",
 		"eslint-config-next": "^13.2.4",
 		"husky": "8.0.3",
+		"jest-environment-jsdom": "29.5.0",
 		"lodash": "4.17.21",
 		"postcss": "8.4.21",
 		"prettier": "2.8.7",
