Review Changes: reset title and not talkTitle in .github/

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -49,7 +49,7 @@ jobs:
               companyName: "Foo"
           - name: "Talk"
             props:
-              title: "Example of a TalkTitle"
+              title: "Example of a Title"
               speakersNames: "John Doe"
           - name: "Meetup"
             props:
