--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@remotion/cli": "3.3.83",
 		"@remotion/google-fonts": "3.3.83",
 		"@remotion/lottie": "3.3.83",
+		"@remotion/noise": "3.3.83",
 		"@remotion/player": "3.3.83",
 		"@remotion/shapes": "3.3.83",
 		"@types/jest": "29.5.0",
