--- a/.eslintrc
+++ b/.eslintrc
@@ -3,5 +3,15 @@
 	"plugins": ["@remotion"],
 	"globals": {
 		"process": true
+	},
+	"rules": {
+		"no-console": "off",
+		"no-restricted-syntax": [
+			"error",
+			{
+				"selector": "CallExpression[callee.object.name='console'][callee.property.name!=/^(log|warn|error|info|trace)$/]",
+				"message": "Unexpected property on console object was called"
+			}
+		]
 	}
 }
