self review: fix rule

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,13 +5,6 @@
 		"process": true
 	},
 	"rules": {
-		"no-console": "off",
-		"no-restricted-syntax": [
-			"error",
-			{
-				"selector": "CallExpression[callee.object.name='console'][callee.property.name!=/^(log|warn|error|info|trace)$/]",
-				"message": "Unexpected property on console object was called"
-			}
-		]
+		"no-console": ["error", { "allow": ["warn", "error"] }]
 	}
 }
