chore(eslint): add eslint rule for console.log (#267)

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,5 +3,8 @@
 	"plugins": ["@remotion"],
 	"globals": {
 		"process": true
+	},
+	"rules": {
+		"no-console": ["error", {"allow": ["warn", "error"]}]
 	}
 }
