--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@remotion/lottie": "3.3.91",
 		"@remotion/noise": "3.3.91",
 		"@remotion/player": "3.3.91",
+		"@remotion/rive": "^3.3.91",
 		"@remotion/shapes": "3.3.91",
 		"@types/jest": "29.5.1",
 		"@vercel/analytics": "^1.0.0",
