fix(version): force @rive-app/canvas-advanced version

--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
 		"@remotion/lottie": "3.3.91",
 		"@remotion/noise": "3.3.91",
 		"@remotion/player": "3.3.91",
-		"@remotion/rive": "^3.3.91",
+		"@remotion/rive": "3.3.91",
 		"@remotion/shapes": "3.3.91",
+		"@rive-app/canvas-advanced": "1.0.98",
 		"@types/jest": "29.5.1",
 		"@vercel/analytics": "^1.0.0",
 		"date-fns": "2.30.0",
