--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"@testing-library/dom": "9.3.0",
 		"@testing-library/jest-dom": "5.16.5",
 		"@testing-library/react": "14.0.0",
+		"@types/lodash": "4.14.194",
 		"@types/node": "18.16.7",
 		"@types/react": "18.2.6",
 		"@types/react-dom": "18.2.4",
