--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"jest-environment-jsdom": "29.5.0",
 		"lodash": "4.17.21",
 		"postcss": "8.4.23",
+		"postcss-nested": "6.0.1",
 		"prettier": "2.8.8",
 		"pretty-quick": "3.1.3",
 		"tailwindcss": "3.3.2",
