--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
 		"process": true
 	},
 	"rules": {
-		"no-console": ["error", {"allow": ["warn", "error"]}]
+		"no-console": ["error", {"allow": ["warn", "error"]}],
+		"no-unused-vars": ["error", { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }]
 	}
 }
