--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,14 @@
 {
-	"extends": ["next/core-web-vitals"],
+	"extends": ["next/core-web-vitals","plugin:@typescript-eslint/recommended"],
+	"parser": "@typescript-eslint/parser",
 	"plugins": ["@remotion"],
 	"globals": {
 		"process": true
 	},
 	"rules": {
 		"no-console": ["error", {"allow": ["warn", "error"]}],
-		"no-unused-vars": ["error", { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }]
+		"@typescript-eslint/no-unused-vars": "error",
+		"@typescript-eslint/no-empty-function": "off",
+		"no-unused-vars": "off"
 	}
 }
