--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
 		"@types/react-dom": "18.2.4",
 		"@types/react-json-editor-ajrm": "^2.5.3",
 		"@types/web": "0.0.99",
+		"@typescript-eslint/eslint-plugin": "5.59.7",
+		"@typescript-eslint/parser": "5.59.7",
 		"autoprefixer": "10.4.14",
 		"debug": "4.3.4",
 		"eslint": "8.41.0",
