--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,19 @@
 {
-	"extends": ["next/core-web-vitals"],
+	"extends": ["next/core-web-vitals", "plugin:@typescript-eslint/recommended"],
+	"parser": "@typescript-eslint/parser",
 	"plugins": ["@remotion"],
 	"globals": {
 		"process": true
 	},
 	"rules": {
-		"no-console": ["error", {"allow": ["warn", "error"]}]
+		"no-console": [
+			"error",
+			{
+				"allow": ["warn", "error"]
+			}
+		],
+		"@typescript-eslint/no-unused-vars": "error",
+		"@typescript-eslint/no-empty-function": "off",
+		"no-unused-vars": "off"
 	}
 }
