--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"@types/react": "18.2.7",
 		"@types/react-dom": "18.2.4",
 		"@types/react-json-editor-ajrm": "^2.5.3",
+		"@types/testing-library__jest-dom": "5.14.6",
 		"@types/web": "0.0.99",
 		"@typescript-eslint/eslint-plugin": "5.59.7",
 		"@typescript-eslint/parser": "5.59.7",
