--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"@testing-library/dom": "9.3.0",
 		"@testing-library/jest-dom": "5.16.5",
 		"@testing-library/react": "14.0.0",
+		"@testing-library/user-event": "14.4.3",
 		"@types/lodash": "4.14.195",
 		"@types/node": "18.16.14",
 		"@types/react": "18.2.7",
