--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"jest": "29.5.0",
 		"lottie-web": "5.11.0",
 		"next": "^13.4.2",
+		"next-themes": "0.2.1",
 		"node-fetch": "^3.3.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
