--- a/.eslintrc
+++ b/.eslintrc
@@ -34,5 +34,11 @@
 				}
 			}
 		]
-	}
+	},
+	"overrides": [{
+		"files": ["__test__/**/*.tsx"],
+		"rules": {
+			"import/order": "off"
+		}
+	}]
 }
