--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
 	"description": "Repository to generate meetup trailers for social network like Twitter, Reddit, Slack to announce speakers and talks and sponsors 📣",
 	"repository": {},
 	"license": "MIT",
+	"engines": {
+		"node": ">=18"
+	},
 	"scripts": {
 		"start": "remotion preview remotion/index.tsx",
 		"upgrade": "remotion upgrade",
@@ -26,7 +29,7 @@
 		"date-fns": "2.30.0",
 		"jest": "29.6.1",
 		"lottie-web": "5.12.2",
-		"next": "^13.4.2",
+		"next": "13.4.10",
 		"next-themes": "0.2.1",
 		"node-fetch": "^3.3.0",
 		"react": "18.2.0",
@@ -53,7 +56,7 @@
 		"autoprefixer": "10.4.14",
 		"debug": "4.3.4",
 		"eslint": "8.45.0",
-		"eslint-config-next": "^13.4.2",
+		"eslint-config-next": "^13.4.10",
 		"eslint-plugin-import": "2.27.5",
 		"husky": "8.0.3",
 		"jest-environment-jsdom": "29.6.1",
