--- a/package.json
+++ b/package.json
@@ -15,20 +15,27 @@
 		"test": "jest",
 		"build": "next build",
 		"dev": "next dev",
-		"test:format": "pnpm lint && tsc"
+		"test:format": "pnpm lint && tsc",
+		"serve": "node server.mjs"
 	},
 	"dependencies": {
+		"@remotion/bundler": "4.0.10",
 		"@remotion/cli": "4.0.10",
 		"@remotion/google-fonts": "4.0.10",
 		"@remotion/lottie": "4.0.10",
 		"@remotion/noise": "4.0.10",
 		"@remotion/player": "4.0.10",
+		"@remotion/renderer": "4.0.10",
 		"@remotion/shapes": "4.0.10",
 		"@types/jest": "29.5.3",
 		"@vercel/analytics": "^1.0.0",
+		"body-parser": "1.20.2",
+		"cors": "2.8.5",
 		"date-fns": "2.30.0",
+		"express": "4.18.2",
 		"jest": "29.6.1",
 		"lottie-web": "5.12.2",
+		"morgan": "1.10.0",
 		"next": "13.4.12",
 		"next-themes": "0.2.1",
 		"node-fetch": "^3.3.0",
