chore(renovate): remove renovate noise

--- a/renovate.json
+++ b/renovate.json
@@ -12,7 +12,8 @@
 		},
 		{
 			"matchUpdateTypes": ["minor", "patch"],
-			"automerge": true
+			"automerge": true,
+			"automergeType": "branch"
 		}
 	]
 }
