--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@remotion/player": "4.0.63",
 		"@remotion/renderer": "4.0.63",
 		"@remotion/shapes": "4.0.63",
+		"@remotion/zod-types": "4.0.62",
 		"@types/jest": "29.5.7",
 		"@vercel/analytics": "^1.0.0",
 		"body-parser": "1.20.2",
@@ -42,7 +43,8 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-json-editor-ajrm": "^2.5.14",
-		"remotion": "4.0.63"
+		"remotion": "4.0.63",
+		"zod": "3.22.4"
 	},
 	"devDependencies": {
 		"@iconify/react": "^4.1.0",
