--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
 		"@vercel/analytics": "^1.0.0",
 		"body-parser": "1.20.2",
 		"cors": "2.8.5",
-		"date-fns": "3.6.0",
 		"express": "4.19.2",
 		"jest": "29.7.0",
 		"lottie-web": "5.12.2",
+		"luxon": "^3.4.4",
 		"morgan": "1.10.0",
 		"next": "14.2.3",
 		"next-themes": "0.3.0",
@@ -54,6 +54,7 @@
 		"@testing-library/react": "14.3.1",
 		"@testing-library/user-event": "14.5.2",
 		"@types/lodash": "4.17.1",
+		"@types/luxon": "^3.4.2",
 		"@types/node": "20.12.11",
 		"@types/react": "18.3.2",
 		"@types/react-dom": "18.3.0",
