--- a/Dockerfile.editor
+++ b/Dockerfile.editor
@@ -1,6 +1,7 @@
 FROM node:20-bookworm
 RUN apt-get update
 RUN apt-get install -y chromium
+RUN corepack enable
 # Copy everything from your project to the Docker image. Adjust if needed.
 COPY --link package.json package*.json yarn.lock* pnpm-lock.yaml* bun.lockb* tsconfig.json* remotion.config.* .prettierrc* ./
 COPY --link remotion ./src
