--- a/Dockerfile.editor
+++ b/Dockerfile.editor
@@ -1,12 +1,13 @@
+# syntax=docker/dockerfile:1.4
 FROM node:20-bookworm
 RUN apt-get update
 RUN apt-get install -y chromium
 RUN corepack enable
 # Copy everything from your project to the Docker image. Adjust if needed.
 COPY --link package.json package*.json yarn.lock* pnpm-lock.yaml* bun.lockb* tsconfig.json* remotion.config.* .prettierrc* ./
-COPY --link remotion ./src
+COPY --link remotion ./remotion
 # If you have a public folder:
 COPY --link public ./public
 # Install the right package manager and dependencies. Adjust if needed.
-RUN pnpm i
-CMD ["pnpx", "remotion studio"]
+RUN pnpm install
+CMD ["pnpm", "run-studio"]
