fix: remove usage of font

--- a/Dockerfile.editor
+++ b/Dockerfile.editor
@@ -12,4 +12,4 @@ COPY --link src ./src
 # Install the right package manager and dependencies. Adjust if needed.
 RUN git init
 RUN pnpm install
-CMD ["pnpm", "run-studio"]
+CMD ["pnpm", "run:studio"]
