--- a/.github/workflows/deploy-editor.yml
+++ b/.github/workflows/deploy-editor.yml
@@ -43,5 +43,8 @@ jobs:
           scw_secret_key: ${{ secrets.SCW_SECRET_KEY }}
           scw_containers_namespace_id: ${{ secrets.CONTAINERS_NAMESPACE_ID }}
           scw_registry: ${{ secrets.SCW_REGISTRY_ENDPOINT }}/${{ env.DOCKER_IMAGE }}
-          scw_memory_limit: 2048
-          scw_cpu_limit: 1000
+          scw_memory_limit: 6144
+          scw_cpu_limit: 4000
+          scw_min_scale: 0
+          scw_max_scale: 1
+          scw_container_port: 3000
