--- a/.github/workflows/deploy-editor.yml
+++ b/.github/workflows/deploy-editor.yml
@@ -49,3 +49,4 @@ jobs:
           scw_max_scale: 1
           scw_container_port: 3000
           scw_max_concurrency: 100
+          scw_sandbox: v2
