fix: remove v2 mode

--- a/.github/workflows/deploy-editor.yml
+++ b/.github/workflows/deploy-editor.yml
@@ -48,4 +48,4 @@ jobs:
           scw_min_scale: 0
           scw_max_scale: 1
           scw_container_port: 3000
-          scw_sandbox: v2
+          scw_max_concurrency: 100
