fix: apply jonny suggestions

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"scripts": {
 		"start": "remotion preview remotion/index.tsx",
 		"run:studio": "remotion studio remotion/index.tsx --ipv4 --log verbose",
+		"browser": "remotion browser ensure",
 		"upgrade": "remotion upgrade",
 		"lint": "eslint remotion app src __test__ --ext ts,tsx,js,jsx",
 		"test": "jest",
