--- a/Dockerfile.editor
+++ b/Dockerfile.editor
@@ -1,7 +1,19 @@
 # syntax=docker/dockerfile:1.4
 FROM node:20-bookworm
 RUN apt-get update
-RUN apt-get install -y chromium
+RUN apt install -y \
+  libnss3 \
+  libdbus-1-3 \
+  libatk1.0-0 \
+  libgbm-dev \
+  libasound2 \
+  libxrandr2 \
+  libxkbcommon-dev \
+  libxfixes3 \
+  libxcomposite1 \
+  libxdamage1 \
+  libatk-bridge2.0-0 \
+  libcups2
 RUN corepack enable
 # Copy everything from your project to the Docker image. Adjust if needed.
 COPY --link package.json package*.json yarn.lock* pnpm-lock.yaml* bun.lockb* tsconfig.json* remotion.config.* .prettierrc* ./
@@ -11,5 +23,7 @@ COPY --link public ./public
 COPY --link src ./src
 # Install the right package manager and dependencies. Adjust if needed.
 RUN git init
+# Install Chrome
 RUN pnpm install
+RUN pnpm browser
 CMD ["pnpm", "run:studio"]
